5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1716_2503.log
== SUBMITION (2019-05-14 17:58:39) 
-- CODE:

n = int(input())
pi = 0
while(n>=1):
	if(n%2 == 1):
		pi = pi+(4/(2*n-1))
	else:
		pi = pi-(4/(2*n-1))
	n = n-1
print(pi)
-- EXECUTION TIME:
0.790378
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.134239811792166
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.0961615264636415
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.2081856522619425
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:58:42) 
-- CODE:

n = int(input())
pi = 0
while(n>=1):
	if(n%2 == 1):
		pi = pi+(4/(2*n-1))
	else:
		pi = pi-(4/(2*n-1))
	n = n-1
print(pi)
-- OUTPUT:
3.134239811792166
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:58:43) 
-- CODE:

n = int(input())
pi = 0
while(n>=1):
	if(n%2 == 1):
		pi = pi+(4/(2*n-1))
	else:
		pi = pi-(4/(2*n-1))
	n = n-1
print(pi)
-- OUTPUT:
3.134239811792166
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:58:45) 
-- CODE:

n = int(input())
pi = 0
while(n>=1):
	if(n%2 == 1):
		pi = pi+(4/(2*n-1))
	else:
		pi = pi-(4/(2*n-1))
	n = n-1
print(pi)
-- EXECUTION TIME:
0.890513
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.134239811792166
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.0961615264636415
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.2081856522619425
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:59:04) 
-- CODE:

n = int(input())
pi = 0
while(n>=1):
	if(n%2 == 1):
		pi = pi+(4/(2*n-1))
	else:
		pi = pi-(4/(2*n-1))
	n = n-1
print(round(pi,1)
-- EXECUTION TIME:
0.508766
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:59:11) 
-- CODE:

n = int(input())
pi = 0
while(n>=1):
	if(n%2 == 1):
		pi = pi+(4/(2*n-1))
	else:
		pi = pi-(4/(2*n-1))
	n = n-1
print(round(pi,8)
-- EXECUTION TIME:
0.6582
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:59:24) 
-- CODE:

n = int(input())
pi = 0
while(n>=1):
	if(n%2 == 1):
		pi = pi+(4/(2*n-1))
	else:
		pi = pi-(4/(2*n-1))
	n = n-1
print(round(pi,8))
-- EXECUTION TIME:
0.762202
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:59:24) 
-- CODE:

n = int(input())
pi = 0
while(n>=1):
	if(n%2 == 1):
		pi = pi+(4/(2*n-1))
	else:
		pi = pi-(4/(2*n-1))
	n = n-1
print(round(pi,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
